[package]
name = "controlled-option"
version = "0.2.0"
description = "Custom Option type with explicit control over niches and memory layout"
homepage = "https://github.com/dcreager/controlled-option"
repository = "https://github.com/dcreager/controlled-option"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Douglas Creager <dcreager@dcreager.net>"]
edition = "2018"

[lib]
# All of our tests are in the tests/it "integration" test executable.
test = false

[dependencies]
controlled-option-macros = { version="=0.2.1", path="controlled-option-macros" }
