[package]
name = "controlled-option-macros"
version = "0.2.1"
description = "Procedural macros for the controlled-option crate"
homepage = "https://github.com/dcreager/controlled-option"
repository = "https://github.com/dcreager/controlled-option"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Douglas Creager <dcreager@dcreager.net>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version="1.0", features=["full"] }
